# RobotObjectPerception

./: README.md
color_detection/: CMakeLists.txt  package.xml
color_detection/Images/NeonFerme/StereoImages/: images_test
color_detection/src/: ColorDetector.py  annex.py  archives.py  colorDetection.py  detection.py  findColor.py  rgb2hsv.py  visualization.py
configuration/: configuration.cfg
messages/: CMakeLists.txt  package.xml
messages/msg/: ColorObjectPar.msg  DetectedObject.msg  DetectedObjectList.msg  DispatcherColor.msg  DispatcherPointCloud.msg  PointCloudObjectPar.msg  PointCloudObjectSeq.msg
nodes/: CMakeLists.txt  dispatcher.py  merger.py  package.xml
point_cloud_detection/: CMakeLists.txt  package.xml
point_cloud_detection/annex/: CMakeLists.txt  pclCreateShape  pclCreateShape.cpp  pclIcp  pclIcp.cpp  pclVisualizer  pclVisualizer.cpp
point_cloud_detection/annex/ClusterExtraction/: cluster_extraction.cpp
point_cloud_detection/annex/InteractiveIcp/: interactive_icp  interactive_icp.cpp
point_cloud_detection/annex/SimpleVisu/: cloud_viewer  cloud_viewer.cpp
point_cloud_detection/annex/Visualizer/: pcl_visualizer_demo
point_cloud_detection/src/: pclParallel.cpp  pclSequential.cpp
